crates/plasm/tests/snapshots/plasm_cli_server_insta__cli_context_expand.snap
---
source: crates/plasm/tests/plasm_cli_server_insta.rs
expression: h.norm(&combined_output(&expand))
---
status: exit status: 0
stdout:

stderr:
Active context: overshow:Profile, overshow:RecordedContent
mirror: .plasm/s/SESSION8/out/NNNN-context/wave.tsv
