crates/plasm/tests/snapshots/plasm_cli_server_insta__cli_error_no_context.snap
---
source: plasm-oss/crates/plasm/tests/plasm_cli_server_insta.rs
expression: h.norm(&combined_output(&run_no_ctx))
---
status: exit status: 1
stdout:

stderr:
Error: No active plasm context for $SERVER. Run `plasm context "intent" CapabilityName ...` first.
