crates/plasm/tests/snapshots/plasm_cli_server_insta__cli_init_doctor.snap
---
source: crates/plasm/tests/plasm_cli_server_insta.rs
expression: h.norm(&combined_output(&doctor))
---
status: exit status: 0
stdout:
plasm remote — diagnostics

Profile: $WORKSPACE/.plasm/profiles/default.json
  exists: true

HTTP API origin: $SERVER
  resolved from: profile
  api_key: unset
  access_token: unset

  GET /v1/health -> 200 OK

Agent flow: `search` → `context -i "…" api:Entity …` → `run`
Local state: $WORKSPACE/.plasm/hosts/<slug>/current → s/<session_id>/ (domain.tsv, out/NNNN-*/)

stderr:
