crates/plasm/tests/snapshots/plasm_cli_server_insta__cli_mirror_after_open.snap
---
source: crates/plasm/tests/plasm_cli_server_insta.rs
expression: h.mirror_layout_snapshot()
---
tree:
current:
dd12084b
session_dir: s/dd12084b/
meta.txt: present
client_session_id dd12084b
intent profile query
catalog overshow DIGEST64
capability overshow Profile
capability overshow RecordedContent
symbols.json: present
latest: present
out/NNNN-context
out/: 0001-context
catalogs/overshow.json: present
