crates/plasm/tests/snapshots/plasm_cli_server_insta__cli_run_plan.snap
---
source: crates/plasm/tests/plasm_cli_server_insta.rs
expression: h.norm(&combined_output(&plan))
---
status: exit status: 0
stdout:
{"plan":true,"dry_run":true,"plan_dag":{"edges":[],"name":"plasm_cli","nodes":[{"dependencies":[],"effect_class":"read","id":"return_1","kind":"query","operation":"query overshow.Profile <= Profile{}","result_shape":"list","uses_result":[]}],"returns":["return_1"],"summary":{"approval_gates":[],"boundedness_facts":[],"derive_nodes":[],"dry_review":{"has_foreach_fanout_risk":false,"has_full_collection_compute":false,"has_unbounded_read_root":true,"has_unprojected_multi_row_read":true},"node_count":1,"parallelizable_roots":["return_1"],"read_nodes":["return_1"],"template_nodes":[],"warnings":["List/page reads without `[field,…]` projection materialize full rows; project at the read or add an explicit project step.","Unbounded root read; add API filters/search text or .limit(n)/.page_size(n) when cost or latency is uncertain"],"write_or_side_effect_nodes":[]},"topological_order":["return_1"],"version":1},"node_results":[{"approval_gate":null,"effect_class":"read","execution_contract":{"display_expr":"Profile{}","entity":"Profile","entry_id":"overshow","ir":{"capability_name":"profile_query","entity":"Profile","op":"query"},"projection":null},"id":"return_1","index":0,"ir":{"expr":{"capability_name":"profile_query","entity":"Profile","op":"query"},"projection":null},"kind":"query","ok":true,"operation":"query overshow.Profile <= Profile{}","predicates":[],"projection":[],"qualified_entity":{"entity":"Profile","entry_id":"overshow"},"result_shape":"list","simulation":{"bindings":{"capability_name":"profile_query","entity":"Profile","hydrate":null,"op":"query","pagination":null,"predicate":null,"projection":null},"il":"Query(Profile all) cap=profile_query","intent":"Query Profile via `profile_query`"},"type_check":"ok"}],"graph_summary":{"approval_gates":[],"boundedness_facts":[],"derive_nodes":[],"dry_review":{"has_foreach_fanout_risk":false,"has_full_collection_compute":false,"has_unbounded_read_root":true,"has_unprojected_multi_row_read":true},"node_count":1,"parallelizable_roots":["return_1"],"read_nodes":["return_1"],"template_nodes":[],"warnings":["List/page reads without `[field,…]` projection materialize full rows; project at the read or add an explicit project step.","Unbounded root read; add API filters/search text or .limit(n)/.page_size(n) when cost or latency is uncertain"],"write_or_side_effect_nodes":[]}}

stderr:
mirror: .plasm/s/SESSION8/out/NNNN-plan/body.txt
